--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'/>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'/>
     <link href='stylesheets/app/app.css' rel='stylesheet' type='text/css'/>
-    <title>Project 3 To Do List</title>
+    <title>Project 5 To Do List</title>
   </head>
   <body>
     <div class='tabs'>
@@ -14,26 +14,9 @@
       <a class='tab' href='add'>Add</a>
     </div>
     <div class='content'>
-      <div class='tab active' id='all'></div>
+      <div class='tab active' id='all'>
+      </div>
       <div class='tab' id='categories'>
-        <div id='family'>
-          <h3>Family</h3>
-        </div>
-        <div id='groceries'>
-          <h3>Groceries</h3>
-        </div>
-        <div id='home'>
-          <h3>Home</h3>
-        </div>
-        <div id='shopping'>
-          <h3>Shopping</h3>
-        </div>
-        <div id='travel'>
-          <h3>Travel</h3>
-        </div>
-        <div id='work'>
-          <h3>Work</h3>
-        </div>
       </div>
       <div class='tab' id='add'>
         <form>
@@ -44,7 +27,7 @@
       </div>
     </div>
     <script src='http://code.jquery.com/jquery-1.9.1.min.js' type='text/javascript'></script>
-    <script src='javascripts/app.js' type='text/javascript'></script>
+    <script src='javascripts/client-app.js' type='text/javascript'></script>
   </body>
   
 </html>
